# tex-table

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  tex_table.py
src/tex_table/: tex_table.py
tests/: unit_tests.py
tex_table.egg-info/: PKG-INFO  SOURCES.txt
