[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tex_table"
version = "0.0.1"
authors = [
  { name="Dan DeGenaro", email="drd92@georgetown.edu" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/dan-the-meme-man/tex-table"
Issues = "https://github.com/dan-the-meme-man/tex-table/issues"